--- a/_posts/2015-04-24-ostrava.markdown
+++ b/_posts/2015-04-24-ostrava.markdown
@@ -1,8 +1,8 @@
 ---
 title:  "Climbing inside a museum, in Ostrava"
 subtitle: "Climbing or mining?"
-author: "RaRa"
-avatar: "img/authors/wferr.png"
+author: "GratefulMood"
+avatar: "img/authors/GratefulMood.png"
 image: "img/e.jpg"
 date:   2015-04-24 12:12:12
 ---
